be/src/util/proc-info-test.cc
@@ -47,6 +47,14 @@ TEST(ProcessStateInfo, Basic) {
   ASSERT_GT(process_state_info.GetInt("fd/count"), 0);
 }
 
+TEST(MappedMapInfo, Basic) {
+  MappedMemInfo result = MemInfo::ParseSmaps();
+  ASSERT_GT(result.num_maps, 0);
+  ASSERT_GT(result.size_kb, 0);
+  ASSERT_GT(result.rss_kb, 0);
+  ASSERT_GE(result.anon_huge_pages_kb, 0);
+}
+
 }
 
 int main(int argc, char **argv) {
